first blog added. Changed layout of Home page. Changed some styles.

--- a/404.html
+++ b/404.html
@@ -1,1 +1,9 @@
-Sorry this page does not exist =(
+---
+layout: page
+title: Sorry this page does not exist :=(
+---
+{% include JB/setup %}
+
+<div class="centered">
+      Try going <a href="index.html" class="button">Home</a> instead
+    </div>
